# alpha-smart-router

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt  package-lock.json  package.json
apps/ping_tool/: CMakeLists.txt
apps/ping_tool/src/: main.cpp
apps/router_app/: CMakeLists.txt
apps/router_app/src/: main.cpp
benchmarks/: CMakeLists.txt
benchmarks/src/: spsc_bench.cpp
config/: services.example.toml.toml
docs/diagrams/: architecture.mmd  mem_overview.mmd  mmdc.json  packet_flow.mmd
docs/verification/: verification_plan.md
include/alpha/: version.hpp
include/alpha/compat/: expected.hpp
include/alpha/config/: config_loader.hpp  constants.hpp
include/alpha/mem/: mem_primitives.hpp  packet.hpp  packet_pool.hpp  spsc_queue.hpp
include/alpha/obs/: observability.hpp
include/alpha/os/: rt.hpp  rt_profile.hpp
include/alpha/routing/: bgp_oracle.hpp  bgp_oracle_sim.hpp  failover_policy.hpp  ingress_selector.hpp  path_selection.hpp  policy_binding.hpp  pop.hpp  qos_policy.hpp  service_registry.hpp
lab/: containerlab.topo.yaml
lab/frr/pop1/: bgpd.conf 
src/: CMakeLists.txt
src/alpha/config/: config_loader.cpp
src/alpha/mem/: mem_primitives.cpp  packet_pool.cpp  spsc_queue.cpp
src/alpha/obs/: observability.cpp
src/alpha/os/: rt_linux.cpp  rt_qnx.cpp
src/alpha/routing/: bgp_oracle_sim.cpp  failover_policy.cpp  ingress_selector.cpp  path_selection.cpp  policy_binding.cpp  qos_policy.cpp  service_registry.cpp
tests/: CMakeLists.txt  test_failover.cpp  test_ingress.cpp  test_mem.cpp  test_qos.cpp  test_routing.cpp
